# lotus

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .tiltignore  AGENTS.md  CLAUDE.md  Makefile  README.md  Tiltfile  apuntes.md  go.mod  opencode.json  package-lock.json  pyproject.toml  sqlc.yaml  tilt_config.yaml
services/analyzer/: .coverage  AGENTS.md  Dockerfile  README.md  config.yaml  pyproject.toml  x.py
services/analyzer/resources/: api_requests.sh  api_response_example.json  open_ai_models_20250920.json
services/analyzer/src/: config.py  database.py  dependencies.py  logger.py  main.py  text_analyzer.py
services/analyzer/src/clients/: base_mlflow_client.py  embedding_client.py  ml_sentiment_client.py  ml_topic_client.py  openai_topic_client.py
services/analyzer/src/content_safety/: __init__.py  analyzers.py  detectors.py  schemas.py
services/analyzer/src/crud/: journal_content_flags.py  journal_details.py  journal_embeddings.py  journal_sentiments.py  journal_topics.py  journals.py
services/analyzer/src/ml/: topic_client.py
services/analyzer/src/models/: journal_content_flags.py  journal_details.py  journal_embeddings.py  journal_sentiments.py  journal_topics.py  journals.py
services/analyzer/src/routers/v1/: __init__.py  analyze.py  cache.py  journal_embeddings.py  journal_sentiments.py  journal_topics.py  journal_topics_openai.py  pact_states.py
services/analyzer/src/schemas/: analyze.py  openai_topics.py  sentiments.py
services/analyzer/tests/: conftest.py
services/analyzer/tests/contract/: test_analyzer_provider.py
services/analyzer/tests/fixtures/models/: sentiment_test_model.pkl  topic_test_model.pkl
services/analyzer/tests/fixtures/sql/: seed_source_data.sql
services/analyzer/tests/integration/: analyze_endpoint_test.py  journal_topics_test.py  sentiment_test.py  test_sentiment.py  test_topics.py  test_topics_openai.py
services/analyzer/tests/unit/: test_base_mlflow_client.py  test_cache.py  test_content_safety.py  test_dependencies.py  test_embedding_client.py  test_journal_embeddings.py  test_journal_sentiments_crud.py  test_journal_sentiments_router.py  test_journal_topics_crud.py  test_journals_crud.py  test_main.py  test_ml_topic_client.py  test_openai_topic_client.py  test_pact_states.py  test_sentiment.py  test_sentiment_client.py  test_topic_client.py  test_topics.py
services/dagster/: .gitignore  AGENTS.md  DAGSTER_CONCEPTS_REVIEW.md  Dockerfile  Dockerfile.webserver  README.md  apuntes.md  dagster.yaml  entrypoint.sh  helper.py  pyproject.toml  workspace.yaml
services/dagster/feast_repo/: __init__.py  entities.py  feature_store.yaml  feature_views.py
services/dagster/om_ingestion/: pyproject.toml
services/dagster/src/dagster_project/: assets.py  dbt_config.py  dbt_pipeline.py  definitions.py  gates.py
services/dagster/src/dagster_project/assets/: __init__.py  api_assets.py  dbt_assets.py  example_assets.py  sales_data.py
services/dagster/src/dagster_project/defs/: assets.py  resources.py
services/dagster/src/dagster_project/jobs/: __init__.py  daily_sales_job.py  dbt_pipeline_job.py  example_job.py  game_bets_pipeline_job.py  game_types_job.py  utils.py  (+7 more)
services/dagster/tests/: conftest.py  test_api_assets.py  test_integration.py  test_jobs.py  test_materialization.py  test_resources.py  test_slack_hooks.py
services/dagster/tests/integration/: __init__.py  test_api_assets_integration.py  test_incremental_example_api_integration.py  test_postgres_writer_integration.py
services/dagster/tests/unit/: __init__.py  test_dbt_pipeline.py  test_definitions.py  test_gates.py
services/dbt/: .dockerignore  AGENTS.md  Dockerfile  README.md  dbt_project.yml  profiles.yml  pyproject.toml
services/dbt/models/: _groups.yml
services/dbt/models/staging/: stg_journal_details.sql  stg_journal_details.yml  stg_journal_sentiments.yml  stg_journal_topics.sql  stg_journal_topics.yml  stg_journals.sql  stg_journals.yml  stg_users.sql  stg_users.yml
services/dbt/profiles/: profiles.yml
services/django/: .gitignore  AGENTS.md  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml
services/django/core/: admin.py  apps.py  auth_utils.py  backends.py  middleware.py  models.py  signals.py  urls.py
services/django/core/migrations/: 0001_initial.py  0002_create_admin_user.py  0002_seed_data.py  0003_create_admin_user.py  0003_featureflag.py  0004_active_ml_model.py  0004_create_user_groups.py  0005_runtimeconfig.py  0006_remove_featureflag.py  0007_usergamebalance_usergamebet.py  0008_journaltopic_subtopic_name.py  0009_seed_openai_topic_modeling.py  0010_journalembedding.py  0011_add_journal_search_vector.py  0012_journal_search_vector_index.py  0013_seed_keyword_search_flag.py  0014_seed_feature_flags.py  0015_seed_dev_data.py  0016_invoiceclient_invoicepaymentinfo_invoicesender_and_more.py  0016_journal_child_fk_on_delete_cascade.py  0017_journalexport.py  0018_alter_journal_user.py  0019_add_journal_content_flags.py  0020_user_community_country_code_and_more.py  0021_seed_community_pulse_flag.py  0022_seed_ml_model_admin_test_users.py  0023_stakeholder_prompts.py  0024_seed_sales_outreach_prompt.py  0025_ingestionwatermark_exampleapirecord.py  0026_add_example_api_users.py  0027_salesdata.py
services/django/lotus_admin/: asgi.py  settings.py  urls.py  wsgi.py
services/django/tests/: conftest.py  test_active_ml_model_admin.py  test_admin.py  test_backends.py  test_management_commands.py  test_middleware.py  test_models.py  test_signals.py  test_stakeholder_prompt_admin.py
services/experiments/: AGENTS.md  Dockerfile  README.md  pyproject.toml
services/experiments/src/models/: semantic_topic_extractor.py  sentiment_analyzer.py  topic_extractor.py
services/experiments/src/training/: train_article_recommender.py  train_example.py  train_sentiment_analysis.py  train_sentiment_analysis_roberta.py  train_topics.py  train_topics_semantic.py
services/experiments/tests/: conftest.py
services/experiments/tests/models/: test_semantic_topic_extractor.py  test_sentiment_analyzer.py  test_topic_extractor.py
(+786 files in other folders)
