[project]
name = "analyzer"
version = "0.0.1"
description = "Analyzer Microservice"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "instructor>=1.11.3",
    "mlflow>=3.3.2",
    "openai>=1.108.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]
local = ["ipykernel>=6.29.5", "ruff>=0.12.4", "ty>=0.0.1a15"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
testpaths = ["tests"]
markers = [
    "wip: work in progress",
    "infrastructure: mocks for dummy data (sql db, http endpoint etc)",
]
addopts = "--cov=src --cov-report=term-missing --color=yes"
