[project]
name = "dagster_project"
requires-python = ">=3.13,<3.14"
version = "0.1.0"
dependencies = [
    "boto3>=1.42.2",
    "dagster==1.12.6",
    "dagster-dbt>=0.28.3",
    "dagster-postgres==0.28.6",
    "dagster-webserver>=1.12.6",
    "dbt-postgres>=1.9.1",
    "feast>=0.57.0",
    "polars>=1.35.2",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
local = ["ruff>=0.14.9", "ipykernel>=7.1.0"]
webserver = [
    "dagster==1.12.6",
    "dagster-graphql==1.12.6",
    "dagster-webserver==1.12.6",
    "dagster-postgres==0.28.6",
    "dagster-docker==0.28.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"
registry_modules = ["dagster_project.components.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=dagster_project",
    "--cov-report=term",
    "--color=yes",
]
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that require external services (e.g., database)",
    "slow: Tests that take a long time to run",
]

[tool.ruff]
# Enable auto-fixing
fix = true
# Show fixes that would be applied
show-fixes = true
# Target Python version
target-version = "py313"
# Line length
line-length = 100
# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable import sorting and organization
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "ARG003", # Unused class method argument
    "ARG004", # Unused static method argument
    "ARG005", # Unused lambda argument
]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["dagster_project"]
force-single-line = false
force-sort-within-sections = true
split-on-trailing-comma = true
combine-as-imports = true
order-by-type = true
force-wrap-aliases = true

[tool.ruff.format]
# Formatting configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in test files
"tests/**/*.py" = [
    "ARG",  # Allow unused arguments in tests
    "S101", # Allow assert statements in tests
]
