[project]
name = "dagster_project"
requires-python = ">=3.13,<3.14"
version = "0.1.0"
dependencies = [
    "boto3>=1.42.2",
    "dagster==1.12.6",
    "dagster-dbt>=0.28.3",
    "dagster-postgres==0.28.6",
    "dagster-webserver>=1.12.6",
    "dbt-postgres>=1.9.1",
    "feast[postgres]>=0.57.0",
    "polars>=1.35.2",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
local = ["ruff>=0.14.9", "ipykernel>=7.1.0"]
webserver = [
    "dagster==1.12.6",
    "dagster-graphql==1.12.6",
    "dagster-webserver==1.12.6",
    "dagster-postgres==0.28.6",
    "dagster-docker==0.28.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"
registry_modules = ["dagster_project.components.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=dagster_project",
    "--cov-report=term",
    "--color=yes",
]
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that require external services (e.g., database)",
    "slow: Tests that take a long time to run",
]

# Ruff base config is inherited from root pyproject.toml
# Only service-specific settings are defined here

[tool.ruff.lint.isort]
# Service-specific import sorting configuration
known-first-party = ["dagster_project"]

# Ruff formatting config is inherited from root pyproject.toml

# Per-file ignores are inherited from root pyproject.toml
