[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.3.1",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]

[dependency-groups]
dev = ["psutil>=7.0.0", "pytest>=8.4.1", "pytest-cov>=6.2.1"]
local = ["ipykernel>=6.30.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--color=yes",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests with external services",
    "slow: Tests that take more than 1 second",
    "performance: Performance regression tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*", "*/__init__.py", "*/training/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
